--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -95,16 +95,20 @@
         }).addTo(map);
 
     var processing_layer = L.featureGroup().addTo(map);
-
+    var update_only = false;
     function update_processing_status() {
         $.post({
             url: '/processing_status',
-            data: JSON.stringify({'foo': 'bar'}),
+            data: {
+                'update_only': update_only
+            },
+            dataType: 'json',
             success: function (data) {
-                data_json = JSON.parse(data);
+                data_json = data;
                 $('#status').html(
                     '<p>'+data_json['query_time']+'</p><p>n_units: '+
-                    data_json['n_units']+'</p>');
+                    data_json['n_processing_units']+'</p>');
+                update_only = true;
             }
         }).fail(function(data) {
             $('#status').html('error: ' + JSON.stringify(data));
