--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -72,7 +72,8 @@
     </div>
 </body>
 <script type="text/javascript">
-    var map = L.map('mapid').setView([0, 0], 2);
+    var map = L.map('mapid', {
+         preferCanvas: true}).setView([0, 0], 2);
     $('.leaflet-container').css('cursor','crosshair');
     L.gridLayer.googleMutant({
             maxZoom: 24,
@@ -96,6 +97,7 @@
 
     var processing_layer = L.featureGroup().addTo(map);
     var update_only = false;
+    var status_polygons = {};
     function update_processing_status() {
         $.post({
             url: '/processing_status',
@@ -109,6 +111,15 @@
                     '<p>'+data_json['query_time']+'</p><p>n_units: '+
                     data_json['n_processing_units']+'</p>');
                 update_only = true;
+                $.each(
+                    data_json['polygons_to_update'],
+                    function(polygon_id, state) {
+                        var rect = L.rectangle(
+                            state['bounds'],
+                            {color: "#ff7800", weight: 1}).addTo(
+                                processing_layer);
+                        status_polygons[polygon_id] = rect;
+                    });
             }
         }).fail(function(data) {
             $('#status').html('error: ' + JSON.stringify(data));
