--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -96,23 +96,23 @@
         }).addTo(map);
 
     var processing_layer = L.featureGroup().addTo(map);
-    var update_only = false;
+    var last_update_tick = -1;
     var status_polygons = {};
     function update_processing_status() {
         $.post({
             url: '/processing_status',
             data: {
-                'update_only': update_only
+                'last_update_tick': last_update_tick
             },
             dataType: 'json',
             success: function (data) {
-                data_json = data;
+                last_update_tick = data['last_update_tick']
                 $('#status').html(
-                    '<p>'+data_json['query_time']+'</p><p>n_units: '+
-                    data_json['n_processing_units']+'</p>');
-                update_only = true;
+                    '<p>'+data['query_time']+'</p><p>n_units: '+
+                    data['n_processing_units']+'</p>');
+                last_update_tick = update_only = true;
                 $.each(
-                    data_json['polygons_to_update'],
+                    data['polygons_to_update'],
                     function(polygon_id, state) {
                         if (!(polygon_id in status_polygons)) {
                             var rect = L.rectangle(
