--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -98,6 +98,7 @@
     var processing_layer = L.featureGroup().addTo(map);
     var last_update_tick = -1;
     var status_polygons = {};
+    var session_uuid = 'none';
     function update_processing_status() {
         $.post({
             url: '/processing_status',
@@ -107,6 +108,7 @@
             dataType: 'json',
             success: function (data) {
                 last_update_tick = parseInt(data['last_update_tick']);
+                session_uuid = data['session_uuid'];
                 $('#status').html(
                     '<p>'+data['query_time']+'</p>'+
                     '<table><tr><th>status</th><th>count</th></tr>'+
