fixed a bug when not sending the remote uuid

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -103,7 +103,8 @@
         $.post({
             url: '/processing_status',
             data: {
-                'last_update_tick': last_update_tick
+                'last_update_tick': last_update_tick,
+                'session_uuid': session_uuid,
             },
             dataType: 'json',
             success: function (data) {
