--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -106,6 +106,10 @@
             },
             dataType: 'json',
             success: function (data) {
+                if (session_uuid != data['session_uuid']) {
+                    processing_layer.clearLayers();
+                    status_polygons = {};
+                }
                 session_uuid = data['session_uuid'];
                 $('#status').html(
                     '<p>'+data['query_time']+'</p>'+
