indicating colors for known dams

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -129,7 +129,7 @@
                                 {
                                     color: state['color'],
                                     weight: 1,
-                                    fill: true,
+                                    fill: bool(state['fill']),
                                     fillOpacity: 0.6,
                                 }).addTo(
                                     processing_layer);
