no need to parse int

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -128,7 +128,7 @@
                                 state['bounds'],
                                 {
                                     color: state['color'],
-                                    weight: int(state['weight']),
+                                    weight: state['weight'],
                                     fill: state['fill'] == 'true',
                                     fillOpacity: 0.6,
                                 }).addTo(
