--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -98,11 +98,13 @@
     var processing_layer = L.featureGroup().addTo(map);
     var status_polygons = {};
     var session_uuid = 'none';
+    var last_known_dam_id = -1;
     function update_processing_status() {
         $.post({
             url: '/processing_status',
             data: {
                 'session_uuid': session_uuid,
+                'last_known_dam_id', last_known_dam_id,
             },
             dataType: 'json',
             success: function (data) {
@@ -113,12 +115,9 @@
                 session_uuid = data['session_uuid'];
                 $('#status').html(
                     '<p>'+data['query_time']+'</p>'+
-                    '<table><tr><th>status</th><th>count</th></tr>'+
-                    '<tr><td>unscheduled</td><td>'+data['unscheduled']+'</td></tr>' +
-                    '<tr><td>fetching data</td><td>'+data['fetching data']+'</td></tr>' +
-                    '<tr><td>analyzing</td><td>'+data['analyzing']+'</td></tr>' +
-                    '<tr><td>complete</td><td>'+data['complete']+'</td></tr>' +
-                    '<tr><th>TOTAL</th><td>'+data['n_processing_units']+'</td></tr>' +
+                    '<table><tr><th>status</th><th>value</th></tr>'+
+                    '<tr><td>total dam count</td><td>'+data['max_dam_id']+'</td></tr>' +
+                    '<tr><td>session_uuid</td><td>'+session_uuid+'</td></tr>' +
                     '</table>');
                 $.each(
                     data['polygons_to_update'],
@@ -140,6 +139,7 @@
                             });
                         }
                     });
+                last_known_dam_id = data['max_dam_id'];
             }
         }).fail(function(data) {
             $('#status').html('error: ' + JSON.stringify(data));
