syntax error on javascript

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -104,7 +104,7 @@
             url: '/processing_status',
             data: {
                 'session_uuid': session_uuid,
-                'last_known_dam_id', last_known_dam_id,
+                'last_known_dam_id': last_known_dam_id,
             },
             dataType: 'json',
             success: function (data) {
