wrapping predicate in parens

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -142,7 +142,7 @@
                             }
                         });
                     last_known_dam_id = data['max_dam_id'];
-                    if data['all_sent'] == 'true' {
+                    if (data['all_sent'] == 'true') {
                         all_sent = true;
                     }
                 }
